# distance-estimator-renderer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  todo.txt
cmake/: group_sources.cmake  header_directories.cmake
renderer/: CMakeLists.txt
renderer/include/renderer/: renderer.hpp  uniform.hpp
renderer/source/: CMakeLists.txt  renderer.cpp
renderer/source/glsl/: constants.glsl  structures.glsl  utility.frag
renderer/source/glsl/2d/: colouring.frag  complex_plane.frag  complex_plane.vert
renderer/source/glsl/2d/signed_distance_functions/: flat_background.frag  julia_set.frag  mandelbrot.frag
renderer/source/glsl/3d/: camera_frame.vert  colouring.frag  ray_march.frag  utility_3d.frag
renderer/source/glsl/3d/signed_distance_functions/: Plane.frag  cube.frag  sphere.frag
renderer/source/interfaces/: gl_interface.cpp  gl_interface.hpp
renderer/source/opengl/: gl_interface.cpp  gl_interface.hpp  screen_vertex_array.cpp  screen_vertex_array.hpp  vertex_array.hpp
renderer/source/preprocessor/: lexer.cpp  lexer.hpp  parser.cpp  parser.hpp
renderer/source/shaders/: shader.cpp  shader.hpp
renderer/source/utilities/: file_loader.cpp  file_loader.hpp
viewer/: CMakeLists.txt
viewer/source/: CMakeLists.txt  Inspector.qml  Viewport.qml  camera.cpp  camera.hpp  constants.hpp  inspector.cpp  inspector.hpp  main.cpp  main.qml  main_window.cpp  main_window.hpp  qml.qrc  singletons.cpp  singletons.hpp  uniform.cpp  uniform.hpp  viewport.cpp  viewport.hpp
viewer/source/UI/: Camera.qml  Inspector.qml  Screen_Input.qml  Viewport.qml  camera.cpp  camera.hpp  camera_controller.cpp  camera_controller.hpp  inspector.cpp  inspector.hpp  main.qml  main_window.cpp  main_window.hpp  screen_input.cpp  screen_input.hpp  viewport.cpp  viewport.hpp
viewer/source/Wrapper/: renderer.cpp  renderer.hpp  uniform.cpp  uniform.hpp
